Diakonos Changelog
------------------

0.9.4
- Searching within a selection now highlights only within selection, and reports only the number of matches in the selection.
- Can now replace all within selection.
- Basic mouse support added.
- Indentation performance vastly improved.

0.9.3

- Ruby 2.0 or higher now required.
- Tab completion of paths now uses session dir.
- save_backup_files setting (default false).
- Slightly improve render speed of some highlighted languages.
- Fuzzy file find no longer active when current input line is an absolute path (performance improvement).

0.9.2

- Fixed stale session bugs.
- Ruby 2.0.0 compatibility.
- colour.background setting.
- Fuzzy file find: Listing now sorted alphabetically.
- Now use by default the terminal's current/default background colour, including possible transparency.
- Support selection by Shift key with cursor movement.

0.9.1

- Added PKGBUILD to bash filemask.
- Fixed -m switch (open matching files).
- Fixed breakage of grepping through all buffers when some buffers are unnamed.
- Fixed bug that prevented type_character from working in macros.
- Fixed open_file bug caused by empty input.
- Fixed several display bugs.
- Added fuzzy_file_find.recursive option (default true).
- Fixed fuzzy_file_find.max_files.
- Improved efficiency of fuzzy file finder.
- Various updates to default syntax highlighting.

0.9.0

- Added partial UTF-8 support (only characters the same width as US-ASCII).
- Some bug fixes.

0.8.15

- Introduced open_as_first_buffer setting (default false).
- Now shows number of matches found after searching.
- Now shows number of replacements made.
- Now switches to previous buffer when switching to the current buffer by number.
- Last search and readline histories are now saved to sessions.
- Added delete_from function.
- Added key.after configuration directive for history-sensitive key mapping.
- Added select_word function.  Mapped to <Ctrl-space, Ctrl-space> by default.