@@ -1198,6 +1198,7 @@ lang.c.indent.unindenters (case|^\s*[\]})])
 lang.c.indent.preventers (\".+?[^\\]\")|('.+?[^\\]')|(\/\/.*)
 lang.c.indent.ignore ^(.+:|\s*?)$
 lang.c.indent.not_indented ^\s*#
+lang.c.indent.triggers (\})$
 lang.c.context.ignore ^(.+:|\s*\{?)$
 
 # Configuration files
